--- a/source/posts/2012-06-18.md
+++ b/source/posts/2012-06-18.md
@@ -1,21 +1,21 @@
 # Что-то будет, что-то будет!
 
-Как многие из вас уже знают, на сегодня заявлено какое-то мега-событие от Microsoft. Точнее, мероприятие в 18 июня в 3pm PDT, так что в Москве это будет уже "завтра". Есть тысячи слухов о том, что же будет показано на этом событие. Я вам сейчас расскажу свою версию, а потом сверим, окей? Впрочем, кажется, я ничем не рискую, по прочтении новостей стало ясно - большинство аналитиков согласны со мной.
+Как многие из вас уже знают, на сегодня заявлено какое-то мега-событие от Microsoft. Точнее, мероприятие 18 июня в 3pm PDT, так что в Москве это будет уже "завтра". Есть тысячи слухов о том, что же будет показано на этом событии. Я вам сейчас расскажу свою версию, а потом сверим, окей? Впрочем, кажется, я ничем не рискую, по прочтении новостей стало ясно - большинство аналитиков согласны со мной.
 
 ![center](http://i.zdnet.com/blogs/windows-nook-tablet-new1.jpg)
 
 Посмотрите на картинку. Мой намек ясен? Да, это Nook, на котором запущена Windows 8, и картинка специально такая страшная. Но, давайте по порядку.
 
-[30 апреля сего года, Microsoft и Barns&Noble объявили о стратегическом партнерстве](http://www.barnesandnobleinc.com/press_releases/4_30_12_bn_microsoft_strategic_partnership.html). Тогда все решили, что теперь книжки B&N будут доступны на телефонах WP7, в каком-нибудь приложении вроде "My Nook". Я, кстати, всё еще уверен, что это когда-то произойдет. 
+[30 апреля сего года Microsoft и Barnes&Noble объявили о стратегическом партнерстве](http://www.barnesandnobleinc.com/press_releases/4_30_12_bn_microsoft_strategic_partnership.html). Тогда все решили, что теперь книжки B&N будут доступны на телефонах WP7, в каком-нибудь приложении вроде "My Nook". Я, кстати, всё еще уверен, что это когда-то произойдет. 
 
-На прошлой неделе [the Warp нашли инсайдера, который рассказал им, что Microsoft делает свой планшет](http://www.thewrap.com/media/article/microsoft-go-after-apple-new-tablet-says-insider-44271). Ну, а почему бы нет, главное чтобы опять не получился Microsoft Courier. Слух этот подтвердили так же и другие источники. А я вот не очень поверил. Мало кто понимает, насколько сложно с нуля запустить производство нового планшета, да еще так, чтобы никто про это не узнал. Нет, можно произвести на свет еще один планшет на андроиде, ничем не отличающийся от других. Но, произвести что-то новое незаметно - нельзя. Китайцы сливают почти всё, даже Apple, с их параноидальной безопасностью, и то упускают фотографии с заводов. Так что мое следующее предположение совершенно логично.
+На прошлой неделе [the Warp нашли инсайдера, который рассказал им, что Microsoft делает свой планшет](http://www.thewrap.com/media/article/microsoft-go-after-apple-new-tablet-says-insider-44271). Ну, а почему бы нет, главное чтобы опять не получился Microsoft Courier. Слух этот подтвердили также и другие источники. А я вот не очень поверил. Мало кто понимает, насколько сложно с нуля запустить производство нового планшета, да еще так, чтобы никто про это не узнал. Нет, можно произвести на свет еще один планшет на андроиде, ничем не отличающийся от других. Но, произвести что-то новое незаметно - нельзя. Китайцы сливают почти всё, даже Apple, с их параноидальной безопасностью, и то упускают фотографии с заводов. Так что мое следующее предположение совершенно логично.
 
-Я думаю было бы круто, если бы в рамках "стратегического партнерства" Майкрософт уже выпустила планшет. Если я правильно понимаю архитекуру платформы Windows RT, запустит ее даже на нынешних планшета Nook Color/Tablet - никакой проблемы нет. А китайские заводы нам уже не раз намекали, что скоро нас ждет апгрейд. Со мной, вот, [совершенно согласен теккранч](http://techcrunch.com/2012/06/17/ms-la/). Я сам себе удивляюсь, но мне нравится эта идея. Я давно и нежно люблю планшеты и читалки Nook, потенциал у WP7/W-RT есть. Глядишь, получится не "союз двух лузеров", как с Нокией.
+Я думаю, было бы круто, если бы в рамках "стратегического партнерства" Майкрософт уже выпустила планшет. Если я правильно понимаю архитекуру платформы Windows RT, запустить ее даже на нынешних планшета Nook Color/Tablet - никакой проблемы нет. А китайские заводы нам уже не раз намекали, что скоро нас ждет апгрейд. Со мной, вот, [совершенно согласен теккранч](http://techcrunch.com/2012/06/17/ms-la/). Я сам себе удивляюсь, но мне нравится эта идея. Я давно и нежно люблю планшеты и читалки Nook, потенциал у WP7/W-RT есть. Глядишь, получится не "союз двух лузеров", как с Нокией.
 
 -----
 
 ## Для всех
-* [Заметка Дэна Шапиро, на неожиданную для меня тему: каждый стартап в конечном итоге для продажи](http://www.danshapiro.com/blog/2012/06/of-course-this-company-is-for-sale/). Нет, там есть и другой смысл, но мне важным оказалось только это. {startup}
+* [Заметка Дэна Шапиро на неожиданную для меня тему: каждый стартап в конечном итоге для продажи](http://www.danshapiro.com/blog/2012/06/of-course-this-company-is-for-sale/). Нет, там есть и другой смысл, но мне важным показалось только это. {startup}
 * [В Китае огораживаются](https://tools.ietf.org/html/draft-diao-aip-dns-00), выпустили драфт о том, как жить со своим собственным DNS. Называется "автономный интернет", ага. {china}
 * [Стивен Корона описал свой опыт "30 дней без соц.сетей"](http://stevecorona.com/how-30-days-without-social-media-changed-my-life), думаю, не пойти ли по его стопам. Я, правда, не смогу не писать. Но не читать, наверное, смогу. {social}
 * [Тест браузеров, с целью понять, в каком лучше работают html5 игры](http://www.scirra.com/tutorials/325/which-browser-is-best-for-html5-games). Для десктопа рекомендуют Хром и Фаерфокс, для мобильных победитель - сафари. {browser} {test}
@@ -29,14 +29,14 @@
 
 ## На грани
 * [На таблетке Nook Simple Touch можно запустить MacOS Classic](http://www.theverge.com/2012/6/17/3091831/nook-simple-touch-hack-macintosh-classic-os). Через эмулятор, но суть не в этом. Я внезапно осознал, у меня же есть эта читалка. Надо на нее просто андроид налить и в энгрибёрдз играть, в черно-белом ретро режиме! {android} {macos} {nook}
-* Как вы знаете, недавно падал датацентр Amazon AWS на восточном побережьи США. [Вот полный текст Амазона о том, что же произошло](http://news.ycombinator.com/item?id=4123595). Обратите внимание на комментарии - почти все строго положительные. Потому что лучше честно сказать что сам виноват. {amazon} {outage}
+* Как вы знаете, недавно падал датацентр Amazon AWS на восточном побережье США. [Вот полный текст Амазона о том, что же произошло](http://news.ycombinator.com/item?id=4123595). Обратите внимание на комментарии - почти все строго положительные. Потому что лучше честно сказать что сам виноват. {amazon} {outage}
 * [Коллекция юридических документов для стартапера](https://www.docracy.com/doc/showalluserdocs?userId=10881). Мне вот очень нехватает проекта в стиле Docracy, для всяких типовых договоров в рамках российского права. {docs} {docracy}
 * [Настоящая инструкция о том, как работать с редактором Ed](http://blog.sanctum.geek.nz/actually-using-ed/). Помню как я наблюдал за человеком, попавшим в ed и искавшим выход :) {ed} {unix}
 * [Алекс Мок описывает свой опыт установки домашнего сервера](http://mocko.org.uk/b/2012/06/17/how-i-store-my-1s-and-0s-zfs-bargain-hp-microserver-joy/), на базе HP Microserver. Мне прям аж захотелось купить такую коробчку. Пока держу себя в руках. {homeserver}
 
 ## Для гиков
-* [FLAC.js - проигрывать .flac формата на чистом javascript](http://badassjs.com/post/25174050115/flac-js-aurora-and-the-future-of-web-audio). Я всё никак не привыкну, что теперь на клиентское стороне можно прямо на JS всё делать. В новом FF (и не только) отличный просмотрщик .pdf файлов, тоже на javascript. {flac} {audio} {js}
-* [Оказывается разработку SPDY в nginx спонсировали ребята из Automattic](http://barry.wordpress.com/2012/06/16/nginx-spdy-and-automattic/). Теперь wordpress.com будет доступен через nginx. Я немножко исследовал вопрос - оказывается и правда, SPDY на сайте вордпресса включен. Но только если прямо указать https в URL. И у них там самоподписанный сертификат. Хех. {spdy} {nginx} {wordpress}
+* [FLAC.js - проигрывать .flac формата на чистом javascript](http://badassjs.com/post/25174050115/flac-js-aurora-and-the-future-of-web-audio). Я всё никак не привыкну, что теперь на клиентской стороне можно прямо на JS всё делать. В новом FF (и не только) отличный просмотрщик .pdf файлов, тоже на javascript. {flac} {audio} {js}
+* [Оказывается, разработку SPDY в nginx спонсировали ребята из Automattic](http://barry.wordpress.com/2012/06/16/nginx-spdy-and-automattic/). Теперь wordpress.com будет доступен через nginx. Я немножко исследовал вопрос - оказывается и правда, SPDY на сайте вордпресса включен. Но только если прямо указать https в URL. И у них там самоподписанный сертификат. Хех. {spdy} {nginx} {wordpress}
 * [Организация централизованного логгинга](http://divisionbyzero.net/article/2012/06/17/central-logging-with-open-source-software.html) на штатных syslog-ng и rsyslog. Увидел там рекомендацию использовать [Graphite](http://graphite.wikidot.com/) - поставил для себя, попробовать. {graphite} {monitoring} {logs}
 * [Масштабируемые и Управляемые способы CSSить](http://cwebbdesign.tumblr.com/post/23666803241/scalable-and-maintainable-css-approaches). Я про OOCSS вообще ничего не знал, мне было любопытно. А по честному - мне очень стыдно всё время, насколько я боюсь фронтенда :( {oocss} {css} {html}
 * [Смешное исследование](http://blog.andrewcantino.com/blog/2012/06/15/compressing-code/) - автор скачивал библиотеки, выкидывал из них комментарии и ужимал gzip на максимуме. И на этой базе делал выводы о компрессируемости того или иного языка :) {language} {code} {bs}
@@ -51,4 +51,4 @@
 
 ## Видео и Аудио
 * [Дизайн продуктов в Мозилла](https://air.mozilla.org/product-design-at-mozilla/), на примере Australis. Мне их новый интерфейс очень нравится, жду не дождусь. {mozilla}
-* [Часовое аудио-интервью Стенли Кубрика](http://www.openculture.com/2012/06/rare_1960s_audio_stanley_kubricks_interview_with_ithe_new_yorkeri.html), очень старое, шестидесятых годов, от того в сто раз интереснее.
+* [Часовое аудио-интервью Стенли Кубрика](http://www.openculture.com/2012/06/rare_1960s_audio_stanley_kubricks_interview_with_ithe_new_yorkeri.html), очень старое, шестидесятых годов, оттого в сто раз интереснее.
