oh noes dummy typo

--- a/source/posts/2012-06-19.md
+++ b/source/posts/2012-06-19.md
@@ -44,7 +44,7 @@
 * [CyanogenMod 9 начали готовить к релизу](http://www.cyanogenmod.com/blog/cm9-code-freeze-has-started). Популярная сторонняя прошивка Android 4 (ICS) перешла в стадию подготовки к релизу. Ежедневные (nightly) сборки по-прежнему будут делаться из основной ветки кода, но приниматься туда будут только патчи, багфиксы и код, необходимый для релиза на новые модели телефонов. (via [@sitnin](http://github.com/sitnin)) {mobile} {android}
 * [BadAss JavaScript показали мне мозильскую реализацию Flash](http://badassjs.com/post/25369867558/shumway-mozillas-flash-vm-and-runtime-in-javascript), которая называется [Shumway](https://github.com/mozilla/shumway) и написана на чистом JavaScript. После flac.js и pdf.js я уже не удивляюсь. А Шамвей, кстати, уже неплохо работает, приглядитесь. {browser} {flash} {mozilla}
 * [Новый (для меня) мобильный JS фреймворк - Mobello](http://mobello.github.com/), читается видимо как "Мабило". Прикольно, что со встроенным IDE, и вообще выглядит неплохо. Проверю вечером как оно на реальных устройствах работает. {mobile} {web}
-* [Всем нужны роутеры!](http://www.codinghorror.com/blog/2012/06/because-everyone-still-needs-a-router.html), считает Джеф Атткинс и я с ним на 100% согласен. А вот про [прошивку Tomato](http://en.wikipedia.org/wiki/Tomato_(firmware)), о которой он рассказывает, я узнал впервые. Звучит очень круто. Пойду искать роутер, который поддерживает установку dd-wrt и пробовать. {wifi} {router}
+* [Всем нужны роутеры!](http://www.codinghorror.com/blog/2012/06/because-everyone-still-needs-a-router.html), считает Джеф Атвуд и я с ним на 100% согласен. А вот про [прошивку Tomato](http://en.wikipedia.org/wiki/Tomato_(firmware)), о которой он рассказывает, я узнал впервые. Звучит очень круто. Пойду искать роутер, который поддерживает установку dd-wrt и пробовать. {wifi} {router}
 
 
 ## Для гиков
