typo устроства --> устройства

--- a/source/posts/2012-06-19.md
+++ b/source/posts/2012-06-19.md
@@ -27,7 +27,7 @@
 
 Подробнее со всем этим счастьем вы можете познакомиться [на сайте производителя](http://www.microsoft.com/surface/en/us/default.aspx), если вам повезет. Мне не повезло - сайт производителя на момент написания этой статьи выдавал 500ую ошибку. А остальное лушче читать [в спец-обзоре на Engadget](http://www.engadget.com/2012/06/18/hands-on-with-microsoft-surface-for-windows-rt/). Есть еще [смешной промо-ролик от Майкрософт](http://www.youtube.com/watch?v=dpzu3HM2CIo) с модной музыкой и графикой.
 
-Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут, ну нам показали планшет, работающий под Windows (планшеты вообще и устроства с Windows на борту мы уже видели). Цену не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет еще вживую, возможно моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, по, я почему-то уверен, заоблачным ценам. В чем прикол, может я что-то не заметил?
+Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут, ну нам показали планшет, работающий под Windows (планшеты вообще и устройства с Windows на борту мы уже видели). Цену не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет еще вживую, возможно моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, по, я почему-то уверен, заоблачным ценам. В чем прикол, может я что-то не заметил?
 
 -----
 
