--- a/source/posts/2012-06-18.md
+++ b/source/posts/2012-06-18.md
@@ -4,7 +4,7 @@
 
 ![center](http://i.zdnet.com/blogs/windows-nook-tablet-new1.jpg)
 
-Посмотрите на картинку. Мой намек ясен? Да, это Nook, на котором запущена Windows 8, и картинка специально такая страшная. Но, давайте по порядку.
+Посмотрите на картинку. Мой намек ясен? Да, это Nook, на котором запущена Windows 8, и картинка специально такая страшная. Но давайте по порядку.
 
 [30 апреля сего года Microsoft и Barnes&Noble объявили о стратегическом партнерстве](http://www.barnesandnobleinc.com/press_releases/4_30_12_bn_microsoft_strategic_partnership.html). Тогда все решили, что теперь книжки B&N будут доступны на телефонах WP7, в каком-нибудь приложении вроде "My Nook". Я, кстати, всё еще уверен, что это когда-то произойдет. 
 
@@ -15,38 +15,39 @@
 -----
 
 ## Для всех
+
 * [Заметка Дэна Шапиро на неожиданную для меня тему: каждый стартап в конечном итоге для продажи](http://www.danshapiro.com/blog/2012/06/of-course-this-company-is-for-sale/). Нет, там есть и другой смысл, но мне важным показалось только это. {startup}
 * [В Китае огораживаются](https://tools.ietf.org/html/draft-diao-aip-dns-00), выпустили драфт о том, как жить со своим собственным DNS. Называется "автономный интернет", ага. {china}
 * [Стивен Корона описал свой опыт "30 дней без соц.сетей"](http://stevecorona.com/how-30-days-without-social-media-changed-my-life), думаю, не пойти ли по его стопам. Я, правда, не смогу не писать. Но не читать, наверное, смогу. {social}
-* [Тест браузеров, с целью понять, в каком лучше работают html5 игры](http://www.scirra.com/tutorials/325/which-browser-is-best-for-html5-games). Для десктопа рекомендуют Хром и Фаерфокс, для мобильных победитель - сафари. {browser} {test}
+* [Тест браузеров, с целью понять, в каком лучше работают html5 игры](http://www.scirra.com/tutorials/325/which-browser-is-best-for-html5-games). Для десктопа рекомендуют Хром и Фаерфокс, для мобильных победитель - Сафари. {browser} {test}
 * [В Южной Корее официально запретили торговать игровыми вещами](http://www.incgamers.com/2012/06/south-korea-bans-virtual-item-trading-diablo-3-auction-house-dead/). Т.е. по сути запретили аукцион в Diablo. А скоро запретят еще виртуально убивать и виртуально общаться! {diablo} {korea}
 * [Кодервол собрал фотографии рабочего места известных технарей и программистов](http://coderwall.com/p/gxjpna). Фоток не много, но все любопытные. Особенно интересно - у всех хорошие стулья. Это, имхо, важнее хорошего монитора. {codewall}
 * [Лучший способ предсказать будущее - предотвратить его](http://confusedofcalcutta.com/2007/11/03/the-best-way-to-predict-the-future-is-to-prevent-it/). Почти философский пост о том, как двигаться в сторону инноваций. Слово "инновация" теперь очень опошлено, но какое уж есть. {future}
 * [Разжеванное до пюре объяснение, почему в диалогах кнопка "ОК" всегда справа](http://uxmovement.com/buttons/why-ok-buttons-in-dialog-boxes-work-best-on-the-right/). Я в религию юзабилистов совсем не верю, но этот текст довольно убедителен. {design}
 * [в TheVerge интересно написали про Vizio](http://www.theverge.com/2012/6/15/3076519/vizio-reboot-pc-american-hdtv-success-do-it-again) - контору, которая последние 2 года обещает выпустить iMac, mac book air и прочие прелести "как у эппл", только обычные PC. Я пока у них видел только телевизоры и планшеты. {vizio}
 * ["Хакерам это не понравится"](http://nickchaves.com/post/hackers-gonna-hate), о неапгрейдабильности новой техники от Apple, ну и вообще. {apple}
-* [Ты исключение из правил](https://zapier.com/blog/2012/06/17/you-are-exception-rule/). Фраза, которую автор статьи говорит после вопроса программиста "ну и зачем кто-то будет это покупать?". Да, программисты постоянно не понимают зачем кто-то будет что-то покупать, если это можно самому написать за 15 минут. {coders}
+* [Ты исключение из правил](https://zapier.com/blog/2012/06/17/you-are-exception-rule/). Фраза, которую автор статьи говорит после вопроса программиста "ну и зачем кто-то будет это покупать?". Да, программисты постоянно не понимают, зачем кто-то будет что-то покупать, если это можно самому написать за 15 минут. {coders}
 
 ## На грани
 * [На таблетке Nook Simple Touch можно запустить MacOS Classic](http://www.theverge.com/2012/6/17/3091831/nook-simple-touch-hack-macintosh-classic-os). Через эмулятор, но суть не в этом. Я внезапно осознал, у меня же есть эта читалка. Надо на нее просто андроид налить и в энгрибёрдз играть, в черно-белом ретро режиме! {android} {macos} {nook}
 * Как вы знаете, недавно падал датацентр Amazon AWS на восточном побережье США. [Вот полный текст Амазона о том, что же произошло](http://news.ycombinator.com/item?id=4123595). Обратите внимание на комментарии - почти все строго положительные. Потому что лучше честно сказать что сам виноват. {amazon} {outage}
-* [Коллекция юридических документов для стартапера](https://www.docracy.com/doc/showalluserdocs?userId=10881). Мне вот очень нехватает проекта в стиле Docracy, для всяких типовых договоров в рамках российского права. {docs} {docracy}
-* [Настоящая инструкция о том, как работать с редактором Ed](http://blog.sanctum.geek.nz/actually-using-ed/). Помню как я наблюдал за человеком, попавшим в ed и искавшим выход :) {ed} {unix}
-* [Алекс Мок описывает свой опыт установки домашнего сервера](http://mocko.org.uk/b/2012/06/17/how-i-store-my-1s-and-0s-zfs-bargain-hp-microserver-joy/), на базе HP Microserver. Мне прям аж захотелось купить такую коробчку. Пока держу себя в руках. {homeserver}
+* [Коллекция юридических документов для стартапера](https://www.docracy.com/doc/showalluserdocs?userId=10881). Мне вот очень не хватает проекта в стиле Docracy, для всяких типовых договоров в рамках российского права. {docs} {docracy}
+* [Настоящая инструкция о том, как работать с редактором Ed](http://blog.sanctum.geek.nz/actually-using-ed/). Помню, как я наблюдал за человеком, попавшим в ed и искавшим выход :) {ed} {unix}
+* [Алекс Мок описывает свой опыт установки домашнего сервера](http://mocko.org.uk/b/2012/06/17/how-i-store-my-1s-and-0s-zfs-bargain-hp-microserver-joy/), на базе HP Microserver. Мне прям аж захотелось купить такую коробочку. Пока держу себя в руках. {homeserver}
 
 ## Для гиков
-* [FLAC.js - проигрывать .flac формата на чистом javascript](http://badassjs.com/post/25174050115/flac-js-aurora-and-the-future-of-web-audio). Я всё никак не привыкну, что теперь на клиентской стороне можно прямо на JS всё делать. В новом FF (и не только) отличный просмотрщик .pdf файлов, тоже на javascript. {flac} {audio} {js}
-* [Оказывается, разработку SPDY в nginx спонсировали ребята из Automattic](http://barry.wordpress.com/2012/06/16/nginx-spdy-and-automattic/). Теперь wordpress.com будет доступен через nginx. Я немножко исследовал вопрос - оказывается и правда, SPDY на сайте вордпресса включен. Но только если прямо указать https в URL. И у них там самоподписанный сертификат. Хех. {spdy} {nginx} {wordpress}
+* [FLAC.js - проигрывать .flac формата на чистом javascript](http://badassjs.com/post/25174050115/flac-js-aurora-and-the-future-of-web-audio). Я всё никак не привыкну, что теперь на клиентское стороне можно прямо на JS всё делать. В новом FF (и не только) отличный просмотрщик .pdf файлов, тоже на javascript. {flac} {audio} {js}
+* [Оказывается, разработку SPDY в nginx спонсировали ребята из Automattic](http://barry.wordpress.com/2012/06/16/nginx-spdy-and-automattic/). Теперь wordpress.com будет доступен через nginx. Я немножко исследовал вопрос - оказывается, и правда, SPDY на сайте вордпресса включен. Но только, если прямо указать https в URL. И у них там самоподписанный сертификат. Хех. {spdy} {nginx} {wordpress}
 * [Организация централизованного логгинга](http://divisionbyzero.net/article/2012/06/17/central-logging-with-open-source-software.html) на штатных syslog-ng и rsyslog. Увидел там рекомендацию использовать [Graphite](http://graphite.wikidot.com/) - поставил для себя, попробовать. {graphite} {monitoring} {logs}
-* [Масштабируемые и Управляемые способы CSSить](http://cwebbdesign.tumblr.com/post/23666803241/scalable-and-maintainable-css-approaches). Я про OOCSS вообще ничего не знал, мне было любопытно. А по честному - мне очень стыдно всё время, насколько я боюсь фронтенда :( {oocss} {css} {html}
+* [Масштабируемые и Управляемые способы CSSить](http://cwebbdesign.tumblr.com/post/23666803241/scalable-and-maintainable-css-approaches). Я про OOCSS вообще ничего не знал, мне было любопытно. А по-честному - мне очень стыдно всё время, насколько я боюсь фронтенда :( {oocss} {css} {html}
 * [Смешное исследование](http://blog.andrewcantino.com/blog/2012/06/15/compressing-code/) - автор скачивал библиотеки, выкидывал из них комментарии и ужимал gzip на максимуме. И на этой базе делал выводы о компрессируемости того или иного языка :) {language} {code} {bs}
 * [Еще одна реализация скриптового управления webkit'ом](http://jeanphix.me/Ghost.py/), на питоне и PySlide. Удобно, что есть адаптор для tornado. {webkit} {python}
 * [Странный сервис StatusCoder](https://statuscoder.com/), позволяет простым путем получить http-ответ с известным статусом. Т.е curl http://statuscoder.com/404 вернет **точно** ошибку 404. Пригодится для тестирования скриптов, другой нужды в таком не вижу. {bs} {script}
 * [Опенсорсное решение для мониторинга Redis](https://github.com/kumarnitin/RedisLive#readme) - называется RedisLive. Невероятно красивое, для бесплатного решения. {redis} {monitoring}
 
 ## Разное
-* [Умные методы жульничать на экзамене](http://boingboing.net/2012/06/11/students-assigned-to-cheat-on.html). Жуть какая, хорошо что мне так не приходилось. {fun}
-* [YouTube забанил фильм, который сам автор выложил на youtube](http://www.mdotstrange.com/2012/06/youtube-claims-i-dont-own-my-own-film.html). Ну... случается, чо. Сам фильм (точнее мультфильм) очень интересный, посмотрите трейлер, вдруг вам понравится. Он официально продается всего за $5.
+* [Умные методы жульничать на экзамене](http://boingboing.net/2012/06/11/students-assigned-to-cheat-on.html). Жуть какая, хорошо, что мне так не приходилось. {fun}
+* [YouTube забанил фильм, который сам автор выложил на youtube](http://www.mdotstrange.com/2012/06/youtube-claims-i-dont-own-my-own-film.html). Ну... случается, шож. Сам фильм (точнее мультфильм) очень интересный, посмотрите трейлер, вдруг вам понравится. Он официально продается всего за $5.
 * [Social Issues Research Center выпустил гайд по оффлайн-флирту](http://www.sirc.org/publik/flirt.pdf), осторожно, там .pdf, и он длинный. {flirt}
 
 ## Видео и Аудио
