fixes from @grayru

--- a/source/posts/2012-06-19.md
+++ b/source/posts/2012-06-19.md
@@ -21,36 +21,36 @@
 </table>
 
 
-Судя по всему, первая железка всё-же на Arm процессоре, вторая - полноценный интел-совместимый почти ультрабук. На задней крышке планшетов есть удобная отделяемая подставка KickStand, чтобы планшет мог "стоять" на столе, как фоторамка. Так же (видимо как опция) будет предлагаться очень тонкая, похожая на эппловский Smart Cover, клавиатура, называемая Type Cover. Клавиатура полноразмерная, что само по себе интересно, крепится к корпусу планшета на двух магнитах, между которыми проглядывается 6 прямых контактов. Т.е. клавиатура не безпроводная. Ох, как будут окисляться эти контакты...  Есть и вариант для бедных, точно такой же чехол, но без клавиатуры, называется Touch Cover. И, кстати, этот чехол-клавиатура представлена сразу в разных цветах. Ничего не напоминает? Со старшей моделью так же будет предлагаться опциональный стилус для емкостных экранов.
+Судя по всему, первая железка всё же на Arm процессоре, вторая - полноценный интел-совместимый почти ультрабук. На задней крышке планшетов есть удобная отделяемая подставка KickStand, чтобы планшет мог "стоять" на столе, как фоторамка. Также (видимо, как опция) будет предлагаться очень тонкая, похожая на эппловский Smart Cover, клавиатура, называемая Type Cover. Клавиатура полноразмерная, что само по себе интересно, крепится к корпусу планшета на двух магнитах, между которыми проглядывается 6 прямых контактов. Т.е. клавиатура не безпроводная. Ох, как будут окисляться эти контакты…  Есть и вариант для бедных, точно такой же чехол, но без клавиатуры, называется Touch Cover. И, кстати, этот чехол-клавиатура представлена сразу в разных цветах. Ничего не напоминает? Со старшей моделью так же будет предлагаться опциональный стилус для емкостных экранов.
 
-Так же в гаджете две камеры - фронтальная и задняя. Причем, видно что о задней камере подумали - она нацелена на угол 22 градуса к поверхности. Правильно, чтобы работать, когда планшет установлен на подставку.
+Также в гаджете две камеры - фронтальная и задняя. Причем, видно, что о задней камере подумали - она нацелена на угол 22 градуса к поверхности. Правильно, чтобы работать, когда планшет установлен на подставку.
 
-Подробнее со всем этим счастьем вы можете познакомиться [на сайте производителя](http://www.microsoft.com/surface/en/us/default.aspx), если вам повезет. Мне не повезло - сайт производителя на момент написания этой статьи выдавал 500ую ошибку. А остальное лушче читать [в спец-обзоре на Engadget](http://www.engadget.com/2012/06/18/hands-on-with-microsoft-surface-for-windows-rt/). Есть еще [смешной промо-ролик от Майкрософт](http://www.youtube.com/watch?v=dpzu3HM2CIo) с модной музыкой и графикой.
+Подробнее со всем этим счастьем вы можете познакомиться [на сайте производителя](http://www.microsoft.com/surface/en/us/default.aspx), если вам повезет. Мне не повезло - сайт производителя на момент написания этой статьи выдавал 500ую ошибку. А остальное лучше читать [в спец-обзоре на Engadget](http://www.engadget.com/2012/06/18/hands-on-with-microsoft-surface-for-windows-rt/). Есть еще [смешной промо-ролик от Майкрософт](http://www.youtube.com/watch?v=dpzu3HM2CIo) с модной музыкой и графикой.
 
-Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут, ну нам показали планшет, работающий под Windows (планшеты вообще и устроства с Windows на борту мы уже видели). Цену не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет еще вживую, возможно моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, по, я почему-то уверен, заоблачным ценам. В чем прикол, может я что-то не заметил?
+Мне кажется, что устройство получилось интересным. Только вторичным. Все ждали от Microsoft чего-то большего. А тут, ну нам показали планшет, работающий под Windows (планшеты вообще и устройства с Windows на борту мы уже видели). Цену не объявили, сказав только, что они будут "сопоставимы с остальными". Дату выхода не объявили вовсе, привязали всё к анонсу Windows 8. Я разочарован. Посмотрим на этот гаджет еще вживую, возможно моё мнение изменится. Но пока - это банальный ультрабук с гибкой клавиатурой, по, я почему-то уверен, заоблачным ценам. В чем прикол, может, я что-то не заметил?
 
 -----
 
 ## Для всех
 * А вчера подтвердились слухи, Facebook [действительно купил Face.com](http://face.com/blog/facebook-acquires-face-com/). И уж поверьте, купил не ради домена, конечно. Face.com сейчас один из самых крутых поставщиков услуги распознавания лиц. Поздравляю Гила и всю команду. *А вообще, это символично. FB покупает face.com, а на следующий день, майкрософт запускает **sur**face.com :)* {facecom} {facebook}
-* [Видео: просто супер интерфейс от Sharp: Feel UX](http://vimeo.com/43224490), для андроида. Говорят боян, но я, как обычно, только увидел. Некотрые решения прямо находка. Жду не дождусь когда их перепрут в iOS :) {android} {mobile} {sharp} {design} {*}
+* [Видео: просто супер интерфейс от Sharp: Feel UX](http://vimeo.com/43224490), для андроида. Говорят, боян, но я, как обычно, только увидел. Некоторые решения прямо находка. Жду не дождусь, когда их перепрут в iOS :) {android} {mobile} {sharp} {design} {*}
 * [Сегодняшний выпуск SheldonComics](http://www.sheldoncomics.com/store/item/originalart.html?strip=120618) не только уморительный, но и очень точный. Дорогие маркетёры. Ну хватит уже пихать QR-коды на каждый свободный кусок пространства. Это не помогает. Хорошая реклама - это история, а не кусок непонятных точек. {qrcode}
-* [Конец консистентности в дизайне интерфейсов](http://www.osnews.com/story/26085/The_death_of_consistency_in_UI_design). Странная статья на osNews, о том что нынешние интерфейсы на мобильных не логичные и не последовательные. Вы согласны? Я нет. На мой взгляд до тех пор, пока ты живешь в рамках одной платформы - интерфейсы выглядят очень логично и последовательно. Ну, если эта платформа не Андроид, конечно. {design}
-* [GigaOm пишет о поисковых амбиция Твиттера](http://gigaom.com/2012/06/18/twitter-slowly-unfolding-its-search-ambitions/). Ну слава богу, видимо не один я сумасшедший и вижу в Твиттере в первую очередь поисковую компанию. Поэтому мне так близко всё, что они делают. Твиттер это такой очень-очень персональный (и персонализированный) поиск. {twitter} {search}
-* [Пост в блог WhatsApp, короткий и такой невероятный, что я его даже переведу наверное](http://blog.whatsapp.com/index.php/2012/06/why-we-dont-sell-ads/). О том, почему WhatsApp работает не по рекламной модели. Я очень проникся. Если вы занимаетесь своим продуктом - прочитайте обязательно. {whatsapp} {adv}
+* [Конец консистентности в дизайне интерфейсов](http://www.osnews.com/story/26085/The_death_of_consistency_in_UI_design). Странная статья на osNews, о том, что нынешние интерфейсы на мобильных не логичные и не последовательные. Вы согласны? Я нет. На мой взгляд, до тех пор, пока ты живешь в рамках одной платформы - интерфейсы выглядят очень логично и последовательно. Ну, если эта платформа не Андроид, конечно. {design}
+* [GigaOm пишет о поисковых амбициях Твиттера](http://gigaom.com/2012/06/18/twitter-slowly-unfolding-its-search-ambitions/). Ну, слава богу, видимо, не один я сумасшедший и вижу в Твиттере в первую очередь поисковую компанию. Поэтому мне так близко всё, что они делают. Твиттер - это такой очень-очень персональный (и персонализированный) поиск. {twitter} {search}
+* [Пост в блог WhatsApp, короткий и такой невероятный, что я его даже переведу, наверное](http://blog.whatsapp.com/index.php/2012/06/why-we-dont-sell-ads/). О том, почему WhatsApp работает не по рекламной модели. Я очень проникся. Если вы занимаетесь своим продуктом - прочитайте обязательно. {whatsapp} {adv}
 * [Хехе. Что вы должны сделать, если это ваш последний месяц в Гугле](http://www.quora.com/Google/What-perks-would-you-take-advantage-of-if-you-had-one-last-month-at-Google) - уморительнейший ответ на Quora. И [не такой смешной ответ на Business Insider](http://www.businessinsider.com/heres-what-every-google-employee-must-do-before-they-quit-2012-6). {google} {fire}
 
 ## На грани
 * [CyanogenMod 9 начали готовить к релизу](http://www.cyanogenmod.com/blog/cm9-code-freeze-has-started). Популярная сторонняя прошивка Android 4 (ICS) перешла в стадию подготовки к релизу. Ежедневные (nightly) сборки по-прежнему будут делаться из основной ветки кода, но приниматься туда будут только патчи, багфиксы и код, необходимый для релиза на новые модели телефонов. (via [@sitnin](http://github.com/sitnin)) {mobile} {android}
 * [BadAss JavaScript показали мне мозильскую реализацию Flash](http://badassjs.com/post/25369867558/shumway-mozillas-flash-vm-and-runtime-in-javascript), которая называется [Shumway](https://github.com/mozilla/shumway) и написана на чистом JavaScript. После flac.js и pdf.js я уже не удивляюсь. А Шамвей, кстати, уже неплохо работает, приглядитесь. {browser} {flash} {mozilla}
-* [Новый (для меня) мобильный JS фреймворк - Mobello](http://mobello.github.com/), читается видимо как "Мабило". Прикольно, что со встроенным IDE, и вообще выглядит неплохо. Проверю вечером как оно на реальных устройствах работает. {mobile} {web}
-* [Всем нужны роутеры!](http://www.codinghorror.com/blog/2012/06/because-everyone-still-needs-a-router.html), считает Джеф Атвуд и я с ним на 100% согласен. А вот про [прошивку Tomato](http://en.wikipedia.org/wiki/Tomato_(firmware)), о которой он рассказывает, я узнал впервые. Звучит очень круто. Пойду искать роутер, который поддерживает установку dd-wrt и пробовать. {wifi} {router}
+* [Новый (для меня) мобильный JS фреймворк - Mobello](http://mobello.github.com/), читается, видимо, как "Мабило". Прикольно, что со встроенным IDE, и вообще выглядит неплохо. Проверю вечером, как оно на реальных устройствах работает. {mobile} {web}
+* [Всем нужны роутеры!](http://www.codinghorror.com/blog/2012/06/because-everyone-still-needs-a-router.html), считает Джеф Атткинс и я с ним на 100% согласен. А вот про [прошивку Tomato](http://en.wikipedia.org/wiki/Tomato_(firmware)), о которой он рассказывает, я узнал впервые. Звучит очень круто. Пойду искать роутер, который поддерживает установку dd-wrt и пробовать. {wifi} {router}
 
 
 ## Для гиков
 * [CFFI зарелизили](http://morepypy.blogspot.co.uk/2012/06/release-01-of-cffi.html). Это такой интерфейс, для вызова C/C++ из Python. Я знаю штук пять таких попыток, но CFFI реально работает, это удивительно. {python} {clang}
-* [Люк Перкинс: восход глобальных фронтенд-фреймворков](http://blog.appfog.com/twitter-bootstrap-and-the-rise-of-total-front-end-frameworks/), как обычно, на примере Twitter Bootstrap. Должен сознаться - последнее время ни на чем кроме bootstrap я верстать не могу совсем. Обленился. Очень хочу попробовать Zurb. Кто пробовал, как он? {bootstrap}
-* [Список того NDA, которое ты не можешь разглашать об iOS6](http://david-smith.org/blog/2012/06/18/ios-6-nda-cheatsheet/) согласно оферте, которую ты подписываешь становясь "девелопером" на apple.com. Хороший список, по нему как раз понятно, что самое интересное в iOS6, да? {ios} {mobile}
+* [Люк Перкинс: восход глобальных фронтенд-фреймворков](http://blog.appfog.com/twitter-bootstrap-and-the-rise-of-total-front-end-frameworks/), как обычно, на примере Twitter Bootstrap. Должен сознаться - последнее время ни на чем, кроме bootstrap, я верстать не могу совсем. Обленился. Очень хочу попробовать Zurb. Кто пробовал, как он? {bootstrap}
+* [Список того NDA, которое ты не можешь разглашать об iOS6](http://david-smith.org/blog/2012/06/18/ios-6-nda-cheatsheet/) согласно оферты, которую ты подписываешь, становясь "девелопером" на apple.com. Хороший список, по нему как раз понятно, что самое интересное в iOS6, да? {ios} {mobile}
 * [Как контрибутить на GitHub](http://excid3.com/blog/how-to-contribute-to-open-source-on-github/), развернутая инструкция на примере одного конкретного улучшения Рельс. Рекомендую к прочтению всеми, кто хочет работать с GitHub *правильно* и удобно. {github}
 * [В дополнение к нашему kittycheck.com - предлагается сделать поддержку нового display: feline;](http://displayfeline.com/). Очень годная идея, я считаю. {fun}
 * [Типовые ошибки, которые совершают программисты, когда думают о временных промежутках](http://infiniteundo.com/post/25326999628/falsehoods-programmers-believe-about-time). Особенно, конечно "мельчайшая единица времени - одна секунда. Ну, ладно, одна миллисекунда". И вообще много фана! {fun} {*}
