fixes from everybody

--- a/source/posts/2012-06-19.md
+++ b/source/posts/2012-06-19.md
@@ -21,7 +21,7 @@
 </table>
 
 
-Судя по всему, первая железка всё же на Arm процессоре, вторая - полноценный интел-совместимый почти ультрабук. На задней крышке планшетов есть удобная отделяемая подставка KickStand, чтобы планшет мог "стоять" на столе, как фоторамка. Также (видимо, как опция) будет предлагаться очень тонкая, похожая на эппловский Smart Cover, клавиатура, называемая Type Cover. Клавиатура полноразмерная, что само по себе интересно, крепится к корпусу планшета на двух магнитах, между которыми проглядывается 6 прямых контактов. Т.е. клавиатура не безпроводная. Ох, как будут окисляться эти контакты…  Есть и вариант для бедных, точно такой же чехол, но без клавиатуры, называется Touch Cover. И, кстати, этот чехол-клавиатура представлена сразу в разных цветах. Ничего не напоминает? Со старшей моделью так же будет предлагаться опциональный стилус для емкостных экранов.
+Судя по всему, первая железка всё же на Arm процессоре, вторая - полноценный интел-совместимый почти ультрабук. На задней крышке планшетов есть удобная отделяемая подставка KickStand, чтобы планшет мог "стоять" на столе, как фоторамка. Также (видимо, как опция) будет предлагаться очень тонкая, похожая на эппловский Smart Cover, клавиатура, называемая Type Cover. Клавиатура полноразмерная, что само по себе интересно, крепится к корпусу планшета на двух магнитах, между которыми проглядывается 6 прямых контактов. Т.е. клавиатура не беcпроводная. Ох, как будут окисляться эти контакты…  Есть и вариант для бедных, точно такой же чехол, но без клавиатуры, называется Touch Cover. И, кстати, этот чехол-клавиатура представлена сразу в разных цветах. Ничего не напоминает? Со старшей моделью так же будет предлагаться опциональный стилус для емкостных экранов.
 
 Также в гаджете две камеры - фронтальная и задняя. Причем, видно, что о задней камере подумали - она нацелена на угол 22 градуса к поверхности. Правильно, чтобы работать, когда планшет установлен на подставку.
 
