Fixed type показывет --> показывает

--- a/source/posts/2012-06-20.md
+++ b/source/posts/2012-06-20.md
@@ -30,7 +30,7 @@ Reading Pane, т.е. место, где показывается само пис
 
 Очень крутым и "альтернативным" получилось окно создания письма. Обратите внимание на левую колонку. Ведь так логично -  мне всегда не хватает места по вертикали при написании писем. Поэтому все служебные поля собраны в своеобразную карточку и перенесены налево, вся правая часть предназначена для письма и служебных команд. Панель управления рич-текстом появляется, только если ты выделяешь кусок текста, но все стандартные Ctrl+B и прочие - прекрасно работают. Аттачменты и прочая мишура тоже показываются слева. Я не устану повторять как это прекрасно :)
 
-Еще новый Mail явно показывет, что умеет работать в условиях разных интернетов. Обнаружив проводное соединение (на самом деле - его эмуляцию в Parallels) приложение внезапно предупредило меня, что интернет у меня быстрый, поэтому оно сейчас срочно скачает все письма :) Приятно; надеюсь, по gprs оно так качать не станет.
+Еще новый Mail явно показывает, что умеет работать в условиях разных интернетов. Обнаружив проводное соединение (на самом деле - его эмуляцию в Parallels) приложение внезапно предупредило меня, что интернет у меня быстрый, поэтому оно сейчас срочно скачает все письма :) Приятно; надеюсь, по gprs оно так качать не станет.
 
 Безусловно, есть и минусы. Например настроить его на IMAP от gmail не удалось - только на Exchange. Еще приложение совсем не понимает, что в русских письмах есть проблемы разных кодировок. Нет возможности приостановить процесс синхронизации с сервером. Нет удобной системы фильтров. Нет быстрого способа пометить письмо как спам. Да много чего нет. Но как минималистичная замена "большим" почтовым клиентам - это очень крутая попытка. Очень. Как бы я хотел, чтобы Apple пошла и слизала хорошие решения из этого приложения.
 
